# CineFlowAI

./: .env.example  .gitignore  COMPLETE_PLATFORM_SUMMARY.md  CONTRIBUTING.md  DELIVERABLES.md  LICENSE  PHASE2_SUMMARY.md  PROGRESS.md  README.md
.github/workflows/: cd.yml  ci.yml
backend/: docker-compose.yml
backend/services/admin/: app.py
backend/services/agent-orchestrator/: app.py
backend/services/analytics/: app.py
backend/services/api-gateway/: Cargo.toml  Dockerfile
backend/services/asset-library/: app.py
backend/services/character-ai/: app.py
backend/services/collaboration/: app.py
backend/services/identity/: Cargo.toml
backend/services/identity/src/: auth.rs  db.rs  errors.rs  main.rs  models.rs
backend/services/identity/src/handlers/: auth.rs  mod.rs  organizations.rs  permissions.rs  users.rs
backend/services/interactive-engine/: app.py
backend/services/memory-engine/: app.py
backend/services/narrative-planner/: app.py  requirements.txt
backend/services/scene-composer/: app.py
backend/services/state-engine/: app.py  models.py
backend/services/story-engine/: app.py  database.py  models.py  schemas.py
backend/services/story-engine/services/: __init__.py  character_service.py  story_service.py  world_service.py
backend/services/streaming/: app.py
backend/services/video-generation/: app.py
backend/services/voice-engine/: app.py
backend/services/world-builder/: app.py
backend/shared/graphql/: schema.graphql
backend/shared/protos/: api.proto
database/schemas/: 01-core.sql  02-memory-assets.sql
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  MIGRATION_GUIDE.md  PERFORMANCE_TUNING.md  PRODUCTION_DEPLOYMENT.md  SCALING_GUIDE.md
frontend/: package.json
frontend/apps/admin/: next.config.js  package.json
frontend/apps/creator/: package.json  tailwind.config.js
frontend/apps/viewer/: package.json  tsconfig.json
infrastructure/helm/: Chart.yaml
infrastructure/k8s/: 01-namespace.yaml  02-api-gateway.yaml
infrastructure/monitoring/: prometheus.yml
infrastructure/terraform/: main.tf  variables.tf
scripts/setup/: install-all.sh
sdks/go/: main.go
sdks/javascript/: package.json
sdks/javascript/src/: index.ts
sdks/python/: setup.py
sdks/rust/: Cargo.toml
tests/integration/: test_auth_flow.py
tests/performance/: bench_api.py
